<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ShowImageActivity">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/show_selected_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:adjustViewBounds="true" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_cut_24"
        android:layout_marginTop="50dp"
        android:layout_marginStart="24dp"
        android:rotation="45" />

    <LinearLayout
        android:id="@+id/msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:paddingHorizontal="4dp"
            android:background="@drawable/send_message_back"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/frame_edit_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/message"
                android:inputType="textCapSentences|textMultiLine"
                android:scrollbars="vertical"
                android:autofillHints="message" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/frame_send_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/message_send_back"
            android:src="@drawable/ic_baseline_send_24"
            android:contentDescription="@string/send_image" />

    </LinearLayout>

</RelativeLayout>